IT Manager/force-app/main/default/objects/IT_Asset_Assignment__c/IT_Asset_Assignment__c.object-meta.xml
<CustomObject>
    <description>Used to track users assigned specific IT Assets</description>
    <label>IT Asset Assignment</label>
    <nameField>
        <label>IT Asset Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IT Asset Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>