IT Manager/force-app/main/default/objects/IT_Asset_Assignment__c/fields/Assignee__c.field-meta.xml
<CustomField>
    <fullName>Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Assigned User for the asset</description>
    <label>Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>IT_Asset_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>