IT Manager/force-app/main/default/objects/IT_Asset_Assignment__c/fields/IT_Asset__c.field-meta.xml
<CustomField>
    <fullName>IT_Asset__c</fullName>
    <description>Identifies the Parent IT Asset</description>
    <label>IT Asset</label>
    <referenceTo>IT_Asset__c</referenceTo>
    <relationshipLabel>IT Asset Assignments</relationshipLabel>
    <relationshipName>IT_Asset_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>